# medium-posts-2026

./: .pre-commit-config.yaml  .tool-versions  README.md
.github/workflows/: ollama-issue-summarizer.yml
ai/ollama-issue-summarizer/: README.md
kubernetes/kubectl-apply-control-plane/: README.md
kubernetes/linux-oom-killer/: README.md
metrics/fastapi-otel/: Makefile  README.md  skaffold.yaml
metrics/fastapi-otel/k8s/: app-fast.yaml  app-slow.yaml  jaeger.yaml
metrics/fastapi-otel/python/: Dockerfile  pyproject.toml  requirements.txt
metrics/fastapi-otel/python/fastapi_otel/: fast.py  slow.py
rest/assembly-server/: Makefile  README.md  server.s
